# 33-repo-

./: .gitignore  CLAUDE.md  INTEGRATION_SPEC.md  README.md  pyproject.toml
.github/: copilot-instructions.md
ci/: __init__.py  constitutional_guard.py
data/: failure_alignment.csv  forbidden_runtime_artifacts.json  forbidden_runtime_patterns.json  k0_w0_r0_alignment_registry.json  runtime_lift_request.ready.json
docs/: 00A_CONSTITUTIONAL_PROGRAMMING_AMENDMENT.md  00B_AGENT_BINDING_CONSTITUTION.md  00_MAQOOL_CONSTITUTION.md  01_EUCLIDEAN_PROOFS.md  01_L0_PHONETIC_BOUNDARY.md  02_L1_META_LANGUAGE_BOUNDARY.md  03_L2_LOGICAL_BOUNDARY.md  04_L3_REALITY_BOUNDARY.md  05_DOMAIN_REGISTRY_CONSTITUTION.md  06_DOMAIN_SLOT_GEOMETRY_CONSTITUTION.md  07_GATE_BRIDGE_CONSTITUTION.md  08_PROOF_OBJECT_CONSTITUTION.md  09_COMPUTED_COVERAGE_CONSTITUTION.md  10_DAL_ATOMIC_CONSTITUTION.md  11_LAFZI_FORM_CONSTITUTION.md  11_LAFZI_FORM_CONTRACT.md  12_RUNTIME_EMBARGO_CONSTITUTION.md  13_FAILURE_ALIGNMENT_CONSTITUTION.md  14_EUCLIDEAN_LEARNING_DOMAIN_BOUNDARY.md  14_PR_CHAIN_ROADMAP.md  15_PROJECT_ROADMAP.md  15_REJECTED_RUNTIME_PATTERNS.md  16_PROOF_FAILURE_POLICY_ALIGNMENT.md  16_STRATEGIC_METHODOLOGY.md  17_RUNTIME_EMBARGO_READINESS_LEDGER.md  18_COMPUTED_COVERAGE_SCHEMA_CONSTITUTION.md  18_RUNTIME_EMBARGO_LIFT_PROTOCOL.md  18_TRACESTEP_IDENTITY_PROOF_CONTRACT.md  19_MORPHOLOGY_GENERATOR_THEOREM.md  19_RUNTIME_EMBARGO_LIFT_PR_TEMPLATE.md  20_AGENT_AUTONOMY_RUNBOOK.md  20_WAQF_WASL_BOUNDARY_THEOREM.md  21_LICENSED_INTELLIGIBILITY_CHAIN_CONSTITUTION.md  22_AQD_AUDIT_CONTRACTS_CONSTITUTION.md  (+16 more)
(+211 files in other folders)
